# ScoreDraft

./: CMakeLists.txt  LICENSE  README.md  README_cn.md  ScoreDraft.sln
BasicSamplers/: CMakeLists.txt  FrequencyDetection.cpp  FrequencyDetection.h  InstrumentMultiSampler.cpp  InstrumentMultiSampler.h  InstrumentSingleSampler.cpp  InstrumentSingleSampler.h  PercussionSampler.cpp  PercussionSampler.h  Sample.h  api.cpp
DSPUtil/: CMakeLists.txt  VoiceUtil.h  complex.cpp  complex.h
InstrumentSampler/: CMakeLists.txt  FrequencyDetection.cpp  FrequencyDetection.h  InstrumentMultiSampler.cpp  InstrumentMultiSampler.h  InstrumentSample.cpp  InstrumentSample.h  InstrumentSampler.cpp  InstrumentSampler.vcxproj  InstrumentSampler.vcxproj.filters  InstrumentSamplerFactory.cpp  InstrumentSingleSampler.cpp  InstrumentSingleSampler.h
KarplusStrong/: CMakeLists.txt  KarplusStrong.cpp
KarplusStrongInstrument/: CMakeLists.txt  KarplusStrongInstrument.cpp
KeLa/: CMakeLists.txt  FrequencyDetection.cpp  FrequencyDetection.h  KeLa.cpp  complex.h  fft.cpp  fft.h
MIDIWriter/: CMakeLists.txt  MIDIWriter.cpp
Meteor/: CMakeLists.txt  DrawText.cpp  DrawText.h  MainWidget.cpp  MainWidget.h  MainWidget.ui  Meteor.cpp  Meteor.h  Meteor.py  MeteorPlayer.cpp  MeteorPlayer.h  SubListLookUp.h  ViewWidget.cpp  ViewWidget.h  api.cpp  base64.hpp  blob.hpp
PCMPlayer/: CMakeLists.txt  PCMPlayer.cpp  PCMPlayer.h  api.cpp
PercussionSampler/: CMakeLists.txt  PercussionSampler.cpp  PercussionSampler.vcxproj  PercussionSampler.vcxproj.filters
PyScoreDraft/: CMakeLists.txt  CVVCChineseConverter.py  JPVCVConverter.py  MIDIWriter.cpp  MIDIWriter.h  PyScoreDraft.cpp  PyScoreDraft.h  PyScoreDraft.vcxproj  PyScoreDraft.vcxproj.filters  ScoreDraft.py  ScoreDraftNotes.py  ScoreDraftRapChinese.py  TsuroVCVConverter.py  WavIO.cpp  WavIO.h  WinWavWriter.cpp  print_generated_code_summary.py
QtPCMPlayer/: BufferQueue.cpp  BufferQueue.h  CMakeLists.txt  QtPCMPlayer.cpp  QtPCMPlayer.h  QtPCMPlayer.ui  QtPCMPlayer_Ext.cpp  ViewWidget.cpp  ViewWidget.h  main.cpp
QtPCMPlayer/resources/: resources.qrc
SF2Instrument/: CMakeLists.txt  Presets.cpp  Presets.h  SF2.cpp  SF2.h  SF2Instrument.cpp  SF2Synth.cpp  SF2Synth.h  Synth.cpp
ScoreDraft/: AirBird_eq.cpp  AirBird_just.cpp  CMakeLists.txt  FlyMeToTheMoon_eq.cpp  FlyMeToTheMoon_just.cpp  MIDIWriter.cpp  MIDIWriter.h  ScoreDraft.vcxproj  ScoreDraft.vcxproj.filters  WinPCMPlayer.cpp  WinPCMPlayer.h  WinWavWriter.cpp  WinWavWriter.h  kimiwo_nosete_just.cpp  main.cpp
ScoreDraft/parser/: CustomParser.cpp  CustomParser.h  Document.h  NoteSeqTable.cpp  NoteSeqTable.h  Parser.cpp  Parser.h
ScoreDraftCore/: Beat.cpp  Beat.h  CMakeLists.txt  Deferred.h  Instrument.cpp  Instrument.h  Note.cpp  Note.h  Percussion.cpp  Percussion.h  RapPiece.h  ReadWav.cpp  RefCounted.h  ScoreDraftCore.vcxproj  ScoreDraftCore.vcxproj.filters  Singer.cpp  Singer.h  SingingPiece.cpp  SingingPiece.h  Syllable.h  TrackBuffer.cpp  TrackBuffer.h  VoicePiece.cpp  VoicePiece.h  WavBuffer.h  api.cpp  api.h  utils.h
ScoreDraftCore/instruments/: BottleBlow.cpp  BottleBlow.h  NaivePiano.cpp  NaivePiano.h  PureSin.cpp  PureSin.h  Sawtooth.cpp  Sawtooth.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
ScoreDraftCore/percussions/: TestPerc.cpp  TestPerc.h
Scores/: Always with me.score  Canon.score  ToMIDI.bat  ToWav.bat  kimiwo nosete2.score  play.bat  twinkle.score
SimpleInstruments/: CMakeLists.txt  SimpleInstruments.cpp
SoundFont2/: CMakeLists.txt  Presets.cpp  Presets.h  SF2.cpp  SF2.h  SF2Synth.cpp  SF2Synth.h  Synth.cpp  Synth.h  api.cpp
Test/: FlyMeToTheMoon_eq.py  Hello.py  HelloMeteor.py  ZhenDeAiNi.ly  ZhenDeAiNi.xml  ZhenDeAiNi.yaml  sunshine.yaml  test.yaml  test_xml.py  test_yaml.py
UtauDraft/: CMakeLists.txt  DVVector.hpp  FrqData.cpp  FrqData.h  HNM.cu  OtoMap.cpp  OtoMap.h  PrefixMap.cpp  PrefixMap.h  SentenceGenerator_CPU.cpp  SentenceGenerator_CPU.h  SentenceGenerator_CUDA.cpp  SentenceGenerator_CUDA.h  SentenceGenerator_HNM.cpp  SentenceGenerator_HNM.h  SentenceGenerator_PSOLA.cpp  SentenceGenerator_PSOLA.h  TTEnglishConverter.py  UtauDraft.cpp  UtauDraft.h  UtauDraft_HNM.cpp  UtauDraft_HNM2.cpp  UtauDraft_HNM_CUDA.cpp  UtauDraft_PSOLA.cpp  VCCVEnglishConverter.py  VoiceUtil.cuh  XiaYYConverter.py  fft.cuh
VoiceSampler/: CMakeLists.txt  FrequencyDetection.cpp  FrequencyDetection.h  HNM.cu  SentenceDescriptor.h  SentenceGeneratorCPU.cpp  SentenceGeneratorCPU.h  SentenceGeneratorCUDA.cpp  SentenceGeneratorCUDA.h  SentenceGeneratorGeneral.cpp  SentenceGeneratorGeneral.h  VoiceUtil.cuh  VoiceUtil.h  api.cpp
WavUtil/: CMakeLists.txt  ReadWav.cpp  ReadWav.h  WriteWav.cpp  WriteWav.h
WinPCMPlayer/: CMakeLists.txt  Initializer.cpp  WinPCMPlayer.cpp  WinPCMPlayer.h
docs/: README.md  intro_cn.md  intro_eng.md
python/: CMakeLists.txt  README.md  setup.py
python/ScoreDraft/: BasicSamplers.py  CVVCChineseConverter.py  Document.py  Initializers.py  Instrument.py  JPVCVConverter.py  KarplusStrong.py  MIDIWriter.py  Meteor.py  MusicXMLDocument.py  PCMPlayer.py  Percussion.py  RapChinese.py  ScoreDraftCore.py  SimpleInstruments.py  Singer.py  SoundFont2.py  TTEnglishConverter.py  TsuroVCVConverter.py  UTAUUtils.py  UtauDraft.py  VCCVEnglishConverter.py  VCCVLyricSet.data  VoiceSampler.py  XiaYYConverter.py  YAMLDocument.py  __init__.py
python/ScoreDraft/musicxml/: __init__.py  musicxml.py  xlink.py  xml.py
python_src/: CMakeLists.txt  Document.py  Extensions.py  Instrument.py  InternalInstruments.py  KarplusStrongInstrument.py  MIDIWriter.py  Percussion.py  PercussionSampler.py  QtPCMPlayer.py  SF2Instrument.py  Singer.py  TrackBuffer.py  TsuroVCVConverter.py  __init__.py
python_test/: ArrangingTest.py  CVVCChineseConverter.py  CVVCTest.py  CVVCTest2.py  FlyMeToTheMoon.py  FlyMeToTheMoon_eq.py  GePi.py  GePi_unlimited.py  Hello.py  JPVCVConverter.py  KeLaTest.py  Meteor.py  NaushikaRequiem.py  PinyinCVParser.py  PinyinLyricConverter.py  PrintCatalog.py  PyScoreDraft.pyd  QtPCMPlayer  RapTest.py  ScoreDraft.py  ScoreDraftArranging.py  ScoreDraftNotes.py  ScoreDraftRapChinese.py  (+19 more)
(+123 files in other folders)
