cmake_minimum_required(VERSION 3.0)
project (ScoreDraft)
add_subdirectory(WavUtil)
add_subdirectory(DSPUtil)
add_subdirectory(ScoreDraftCore)
add_subdirectory(ScoreDraft)
add_subdirectory(PyScoreDraft)
add_subdirectory(PercussionSampler)
add_subdirectory(InstrumentSampler)
add_subdirectory(KeLa)
add_subdirectory(MIDIWriter)
if (WIN32) 
add_subdirectory(WinPCMPlayer)
endif()
add_subdirectory(QtPCMPlayer)

add_subdirectory(UtauDraft)
